--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ rvm:
 
 before_install: gem install bundler -v 1.11.2
 
+after_failure:
+  - cat /tmp/processor.log
+  - cat /tmp/crawler_out.log
+
 services:
   - rabbitmq
