--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ rvm:
 before_install: gem install bundler -v 1.11.2
 
 script:
-  - bundle exec rake
+  - bundle exec rake test
   - bundle exec cucumber --format pretty
 
 after_failure:
